--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "gen:graphql": "graphql-codegen --config config/graphql/codegen.yml"
+    "gen:graphql": "graphql-codegen --config config/graphql/codegen.yml",
+    "format": "prettier --write ./src/**/**/**/*.{ts,tsx} --config ./.prettierrc.json"
   },
   "dependencies": {
     "@apollo/client": "^3.8.3",
@@ -20,7 +21,8 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.46.1"
+    "react-hook-form": "^7.46.1",
+    "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.0",
@@ -31,13 +33,19 @@
     "@types/lodash": "^4.14.198",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
     "@vitejs/plugin-react": "^4.0.3",
     "date-fns": "^2.30.0",
-    "eslint": "^8.45.0",
+    "eslint": "^8.49.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "prettier": "^3.0.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
