--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
@@ -35,6 +36,7 @@
     "@graphql-codegen/typescript-operations": "^4.0.1",
     "@types/lodash": "^4.14.198",
     "@types/react": "^18.2.15",
+    "@types/react-beautiful-dnd": "^13.1.7",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
